Re-include CI unit tests with targeted fixes and skips
Shrink the CI surefire exclude list so the headless unit suite covers
  ~1000 tests again, instead of blanketing whole classes.
Fix what we can (CRLF assertions, Base64 expectations, temp JAR
fixture,
  test-extensions resources, CachedJar teardown) and mark remaining
  known-bad cases with clear @Ignore/@Assume notes. Leave only
  ResourceDownloaderTest excluded for the pack.gz cache-slot mismatch.